# event_system_for_pbscpp

./: .clang-format  CMakeLists.txt  README.md
include/event_system/: EventSystem.hpp
include/event_system/internal/: Dispatcher.hpp  IDispatcher.hpp
src/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  advanced_tests.cpp  basic_tests.cpp
